<!--
    Copyright (C) 2015 - Manit Kumar <vikky_manit@yahoo.co.in>
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
    -->

<resources>
    <string name="app_name">SwissbitHomeAutomation</string>
    <string name="action_settings">Settings</string>
    <string name="register_raspberry">Register Server</string>
    <string name="secure_chat">Secure Chat</string>
    <string name="reset_data">Reset Data</string>
    <string name="empty_list">You do not have any Raspberry Pi registered. Please register a Raspberry Pi by clicking on the "+" button in the menu bar</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="btn_join">Join</string>
    <string name="btn_send">Send</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_secure_chat">SecureChat</string>
    <string name="id1">ID-1</string>
    <string name="id2">ID-2</string>
</resources>
