<!--
    Copyright (C) 2015 - Gaurav Kumar Srivastava
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at
    http://www.apache.org/licenses/LICENSE-2.0
    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
    -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tile_bg"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/secure_ids"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/radio_id1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id1"
            android:onClick="onRadioButtonClicked" />
        <RadioButton android:id="@+id/radio_id2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id2"
            android:onClick="onRadioButtonClicked" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/llMsgCompose"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3" >

        <EditText
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="@color/bg_msg_input"
            android:textColor="@color/text_msg_input"
            android:paddingLeft="6dp"
            android:paddingRight="6dp"/>

        <Button
            android:id="@+id/btnJoin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/bg_btn_join"
            android:textColor="@color/white"
            android:text="@string/btn_join" />
    </LinearLayout>

</LinearLayout>